syntax = "proto3";

package localgrpcproto;
option go_package = "/localgrpcproto;localgrpcproto";

import "google/protobuf/empty.proto";

enum ClientType {
  CLI = 0;
  VM = 1;
  API = 2;
}

enum ClientMethode {
  SYSTEM = 0;
  USER = 1;
}

message ProcessInfo {
  bool run_in_container = 1;
  uint32 user_id = 2;
  uint32 process_id = 3;
}

message VMClient {
  string manifest = 1;
}

message ClientWelcomeRequest {
  uint64 version = 1;
  ClientType client_type = 2;
  ClientMethode client_methode = 3;
  optional ProcessInfo unix_proc_info = 4;
  optional VMClient vm_client = 5;
}

message ClientWelcomeResponse {
  uint64 version = 1;
}

message VmListEntry {
  string name = 1;
  string id = 2;
  uint32 state = 3;
  uint64 startTime = 4;
}

message VmListResponse {
  repeated VmListEntry vms = 1;
}

message VmDetailWhitelistEntry {
  repeated string WildCardDomains = 1;
	repeated string ExactDomains = 2;
	repeated string Methods = 3;
	repeated string IPv4List = 4;
	repeated string Ipv6List = 5;
}

message VmDetailHostCAMemberEntry {
  uint32 type = 1;
  string fingerprint = 2;
}

message VmDetailDatabaseEntry {
  string type = 1;
  string host = 2;
  uint32 port = 3;
  string username = 4;
  string database = 6;
  string alias = 7;
}

message VmDetailSharedFunctionEntry {
  string name = 1;
  repeated uint32 parmTypes = 2;
  string mode = 3;
}

message VmDetailsResponse {
  string name = 1;
  uint64 version = 2;
  string owner = 3;
  string repourl = 4;
  string mode = 5;
  string state = 6;
  uint64 startTimestamp = 7;
  repeated VmDetailWhitelistEntry whitelist = 8;
  repeated VmDetailHostCAMemberEntry hostcamember = 9;
  repeated VmDetailDatabaseEntry databases = 10;
  repeated VmDetailSharedFunctionEntry sharedFunctions = 11;
}

message VmDetailsParms {
  oneof value {
    string name = 1;
    string id = 2;
  }
}

service LocalhostAPIService {
  // Wird verwendet damit ein Client seine Sitzungsdaten angeben kann
  rpc WelcomeClient(ClientWelcomeRequest) returns (ClientWelcomeResponse);

  // Ruft eine Liste, aller Verf√ºgabren VM's ab
  rpc ListVMs(google.protobuf.Empty) returns (VmListResponse);

  // Ruft alle Details einer VM ab
  rpc GetVMDetails(VmDetailsParms) returns (VmDetailsResponse);
}
